--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="row">
 
 
-      <div class="card bg-transparent border-0 mt-4 text-black col-xl-6 col-lg-6 col-md-6 col-sm-6">
+      <div class="card bg-transparent border-0 mt-4 text-black col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6">
         <img
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvYmIxMjcyZDMtM2Y5Mi00ZGZiLWJlNDMtNjYxMGZkYjJkOGQzLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-      <div class="card bg-transparent border-0 mt-4  text-white col-xl-6 col-lg-6 col-md-6 col-sm-6">
+      <div class="card bg-transparent border-0 mt-4  text-white col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6">
         <img
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvZjMyODEyMzEtZTJkZi00YTYxLWIzY2YtNmE5ODRjOTIwMmVjLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
@@ -82,7 +82,7 @@
 
       <br>
 
-      <div class="card bg-transparent border-0  mt-4 text-white col-xl-3 col-lg-3 col-md-3 col-sm-3">
+      <div class="card bg-transparent border-0  mt-4 text-white col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
         <img
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvMGU5NDc4NTAtZWZmOS00MzcxLWEzNDAtODlkMjhhMzcxZjRhLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
@@ -94,7 +94,7 @@
         </div>
       </div>
 
-      <div class="card bg-transparent border-0 mt-4  text-white col-xl-3 col-lg-3 col-md-3 col-sm-3">
+      <div class="card bg-transparent border-0 mt-4  text-white col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
         <img
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvOTVkYWIxYjAtYmQwZC00MWM2LWEyMDctMDg3MDJjOTMxYzY5LmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
@@ -106,7 +106,7 @@
         </div>
       </div>
 
-      <div class="card bg-transparent border-0  mt-4 text-white col-xl-3 col-lg-3 col-md-3 col-sm-3">
+      <div class="card bg-transparent border-0  mt-4 text-white col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
         <img
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvMWEwNTkzZGQtMmU4Ni00MzM5LWE3MjQtZDhkMjZjODgwYTFmLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
@@ -118,7 +118,7 @@
         </div>
       </div>
 
-      <div class="card bg-transparent border-0  mt-4 text-white col-xl-3 col-lg-3 col-md-3 col-sm-3">
+      <div class="card bg-transparent border-0  mt-4 text-white col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
         <img
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvZTBkZWY1YzUtZDQ0OC00YmQ1LThhNDctNTdkMzhmNjNmYzZlLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
