--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
   </style>
 </head>
 
-<body>
+<body class="bg-secondary">
   <!--header-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -49,8 +50,6 @@
     </div>
   </nav>
 
-  
-
   <br>
 
   <div class="container ">
@@ -61,7 +60,7 @@
         <img
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvYmIxMjcyZDMtM2Y5Mi00ZGZiLWJlNDMtNjYxMGZkYjJkOGQzLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
-        <div class="card-body bg-dark ">
+        <div class="card-body bg-dark">
           <a href="#" class="card-title post-card__title-link text-white">
             <h5>Card link</h5>
           </a>
@@ -335,7 +334,7 @@
   </footer>
 
   <!-- javascript -->
-  <script src="javascript/javascript.js"></script>
+  <script src="js/javascript.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
   </script>
