--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="#">Charts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Heatmap</a>
+          <a class="nav-link" href="heatmap.html">Heatmap</a>
         </li>
 
       </ul>
@@ -135,7 +135,7 @@
   </div>
 
   <br>
-  <div class="container card">
+  <div class="container card bg-transparent text-white border-light ">
     <!--text boxes-->
     <div class="row card-body">
       <div class="col-md-7" style="margin-left:-15px;">
