--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <a href="#" class="card-title post-card__title-link text-white">
             <h5>Card link</h5>
           </a>
-          <p class="card-text text-white">Last updated 3 mins ago</p>
+          <p class="card-text text-white overflow-auto">Last updated 3 mins ago</p>
         </div>
       </div>
 
@@ -76,7 +76,7 @@
           <a href="#" class="card-title post-card__title-link text-white">
             <h5>Card link</h5>
           </a>
-          <p class="card-text text-white">Last updated 3 mins ago</p>
+          <p class="card-text text-white overflow-auto">Last updated 3 mins ago</p>
         </div>
       </div>
 
@@ -90,7 +90,7 @@
           <a href="#" class="card-title post-card__title-link text-white">
             <h5>Card link</h5>
           </a>
-          <p class="card-text text-white">Last updated 3 mins ago</p>
+          <p class="card-text text-white overflow-auto">Last updated 3 mins ago</p>
         </div>
       </div>
 
@@ -102,7 +102,7 @@
           <a href="#" class="card-title post-card__title-link text-white">
             <h5>Card link</h5>
           </a>
-          <p class="card-text text-white">Last updated 3 mins ago</p>
+          <p class="card-text text-white overflow-auto">Last updated 3 mins ago</p>
         </div>
       </div>
 
@@ -114,7 +114,7 @@
           <a href="#" class="card-title post-card__title-link text-white">
             <h5>Card link</h5>
           </a>
-          <p class="card-text text-white">Last updated 3 mins ago</p>
+          <p class="card-text text-white overflow-auto">Last updated 3 mins ago</p>
         </div>
       </div>
 
@@ -126,7 +126,7 @@
           <a href="#" class="card-title post-card__title-link text-white">
             <h5>Card links</h5>
           </a>
-          <p class="card-text text-white">Last updated 3 mins ago</p>
+          <p class="card-text text-white overflow-auto">Last updated 3 mins ago</p>
         </div>
       </div>
 
@@ -135,6 +135,7 @@
   </div>
 
   <br>
+
   <div class="container card bg-transparent text-white border-light ">
     <!--text boxes-->
     <div class="row card-body">
