--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
             <a class="dropdown-item" href="#">Opinion</a>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Charts</a>
-        </li>
+       
         <li class="nav-item">
           <a class="nav-link" href="heatmap.html">Heatmap</a>
         </li>
@@ -61,8 +59,8 @@
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvYmIxMjcyZDMtM2Y5Mi00ZGZiLWJlNDMtNjYxMGZkYjJkOGQzLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
         <div class="card-body bg-dark">
-          <a href="#" class="card-title post-card__title-link text-white">
-            <h5>Bitcoin ‘supercycle’ sets up Q4 BTC price top as illiquid supply hits all-time high</h5>
+          <a href="#" class="card-title post-card__title-link text-white cardText">
+            Bitcoin ‘supercycle’ sets up Q4 BTC price top as illiquid supply hits all-time high
           </a>
         </div>
       </div>
@@ -72,8 +70,8 @@
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvZjMyODEyMzEtZTJkZi00YTYxLWIzY2YtNmE5ODRjOTIwMmVjLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
         <div class="card-body bg-dark ">
-          <a href="#" class="card-title post-card__title-link text-white">
-            <h5>'Bitcoin fixes this' — US Infrastructure Bill would add $250B to US debt mountain</h5>
+          <a href="#" class="card-title post-card__title-link text-white cardText">
+            'Bitcoin fixes this' — US Infrastructure Bill would add $250B to US debt mountain
           </a>
         </div>
       </div>
@@ -85,8 +83,8 @@
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvMGU5NDc4NTAtZWZmOS00MzcxLWEzNDAtODlkMjhhMzcxZjRhLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
         <div class="card-body bg-dark ">
-          <a href="#" class="card-title post-card__title-link text-white">
-            <h5>Xiaomi retailer in Portugal now accepts Bitcoin payments</h5>
+          <a href="#" class="card-title post-card__title-link text-white cardText">
+            Xiaomi retailer in Portugal now accepts Bitcoin payments
           </a>
         </div>
       </div>
@@ -96,8 +94,8 @@
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvOTVkYWIxYjAtYmQwZC00MWM2LWEyMDctMDg3MDJjOTMxYzY5LmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
         <div class="card-body bg-dark ">
-          <a href="#" class="card-title post-card__title-link text-white">
-            <h5>2022 trial date set for Tether’s accused 'shadow banker' Reggie Fowler</h5>
+          <a href="#" class="card-title post-card__title-link text-white cardText">
+            2022 trial date set for Tether’s accused 'shadow banker' Reggie Fowler
           </a>
         </div>
       </div>
@@ -107,8 +105,8 @@
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvMWEwNTkzZGQtMmU4Ni00MzM5LWE3MjQtZDhkMjZjODgwYTFmLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
         <div class="card-body bg-dark ">
-          <a href="#" class="card-title post-card__title-link text-white">
-            <h5>Bitcoin is the future, YouTube star KSI says</h5>
+          <a href="#" class="card-title post-card__title-link text-white cardText">
+            Bitcoin is the future, YouTube star KSI says
           </a>
         </div>
       </div>
@@ -144,8 +142,6 @@
 
   <!--footer-->
   <footer class="bg-dark text-center text-white">
-   
-
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:
