--- a/index.html
+++ b/index.html
@@ -35,14 +35,10 @@
             <a class="dropdown-item" href="#">Opinion</a>
           </div>
         </li>
-       
         <li class="nav-item">
-<<<<<<< HEAD
-=======
           <a class="nav-link" href="#">Charts</a>
         </li>
         <li class="nav-item">
->>>>>>> parent of 9771a86 (added heatmap)
           <a class="nav-link" href="#">Heatmap</a>
         </li>
 
@@ -65,9 +61,10 @@
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvYmIxMjcyZDMtM2Y5Mi00ZGZiLWJlNDMtNjYxMGZkYjJkOGQzLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
         <div class="card-body bg-dark">
-          <a href="#" class="card-title post-card__title-link text-white cardText">
-            Bitcoin ‘supercycle’ sets up Q4 BTC price top as illiquid supply hits all-time high
+          <a href="#" class="card-title post-card__title-link text-white">
+            <h5>Card link</h5>
           </a>
+          <p class="card-text text-white">Last updated 3 mins ago</p>
         </div>
       </div>
 
@@ -76,58 +73,47 @@
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvZjMyODEyMzEtZTJkZi00YTYxLWIzY2YtNmE5ODRjOTIwMmVjLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
         <div class="card-body bg-dark ">
-          <a href="#" class="card-title post-card__title-link text-white cardText">
-            'Bitcoin fixes this' — US Infrastructure Bill would add $250B to US debt mountain
+          <a href="#" class="card-title post-card__title-link text-white">
+            <h5>Card link</h5>
           </a>
+          <p class="card-text text-white">Last updated 3 mins ago</p>
         </div>
       </div>
 
       <br>
 
-<<<<<<< HEAD
-      <div class="card bg-transparent border-0  mt-4 text-white col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4 col-4">
-=======
       <div class="card bg-transparent border-0  mt-4 text-white col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
->>>>>>> parent of 278d10c (test)
         <img
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvMGU5NDc4NTAtZWZmOS00MzcxLWEzNDAtODlkMjhhMzcxZjRhLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
         <div class="card-body bg-dark ">
-          <a href="#" class="card-title post-card__title-link text-white cardText">
-            Xiaomi retailer in Portugal now accepts Bitcoin payments
+          <a href="#" class="card-title post-card__title-link text-white">
+            <h5>Card link</h5>
           </a>
+          <p class="card-text text-white">Last updated 3 mins ago</p>
         </div>
       </div>
 
-<<<<<<< HEAD
-      <div class="card bg-transparent border-0 mt-4  text-white col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4 col-4">
-=======
       <div class="card bg-transparent border-0 mt-4  text-white col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
->>>>>>> parent of 278d10c (test)
         <img
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvOTVkYWIxYjAtYmQwZC00MWM2LWEyMDctMDg3MDJjOTMxYzY5LmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
         <div class="card-body bg-dark ">
-          <a href="#" class="card-title post-card__title-link text-white cardText">
-            2022 trial date set for Tether’s accused 'shadow banker' Reggie Fowler
+          <a href="#" class="card-title post-card__title-link text-white">
+            <h5>Card link</h5>
           </a>
+          <p class="card-text text-white">Last updated 3 mins ago</p>
         </div>
       </div>
 
-<<<<<<< HEAD
-      <div class="card bg-transparent border-0  mt-4 text-white col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4 col-4">
-=======
       <div class="card bg-transparent border-0  mt-4 text-white col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
->>>>>>> parent of 278d10c (test)
         <img
           src="https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvMWEwNTkzZGQtMmU4Ni00MzM5LWE3MjQtZDhkMjZjODgwYTFmLmpwZw==.jpg"
           class="card-img img-fluid" alt="..." />
         <div class="card-body bg-dark ">
-          <a href="#" class="card-title post-card__title-link text-white cardText">
-            Bitcoin is the future, YouTube star KSI says
+          <a href="#" class="card-title post-card__title-link text-white">
+            <h5>Card link</h5>
           </a>
-<<<<<<< HEAD
-=======
           <p class="card-text text-white">Last updated 3 mins ago</p>
         </div>
       </div>
@@ -141,7 +127,6 @@
             <h5>Card links</h5>
           </a>
           <p class="card-text text-white">Last updated 3 mins ago</p>
->>>>>>> parent of 278d10c (test)
         </div>
       </div>
 
@@ -175,6 +160,171 @@
 
   <!--footer-->
   <footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
+
+        <!-- Twitter -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
+
+        <!-- Google -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-google"></i></a>
+
+        <!-- Instagram -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
+
+        <!-- Linkedin -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
+
+        <!-- Github -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
+      </section>
+      <!-- Section: Social media -->
+
+      <!-- Section: Form -->
+      <section class="">
+        <form action="">
+          <!--Grid row-->
+          <div class="row d-flex justify-content-center">
+            <!--Grid column-->
+            <div class="col-auto">
+              <p class="pt-2">
+                <strong>Sign up for our newsletter</strong>
+              </p>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-md-5 col-12">
+              <!-- Email input -->
+              <div class="form-outline form-white mb-4">
+                <input type="email" id="form5Example2" class="form-control" />
+                <label class="form-label" for="form5Example2">Email address</label>
+              </div>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-auto">
+              <!-- Submit button -->
+              <button type="submit" class="btn btn-outline-light mb-4">
+                Subscribe
+              </button>
+            </div>
+            <!--Grid column-->
+          </div>
+          <!--Grid row-->
+        </form>
+      </section>
+      <!-- Section: Form -->
+
+      <!-- Section: Text -->
+      <section class="mb-4">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
+          repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
+          eum harum corrupti dicta, aliquam sequi voluptate quas.
+        </p>
+      </section>
+      <!-- Section: Text -->
+
+      <!-- Section: Links -->
+      <section class="">
+        <!--Grid row-->
+        <div class="row">
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Links</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Link 1</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 2</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 3</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 4</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Links</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Link 1</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 2</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 3</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 4</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Links</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Link 1</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 2</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 3</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 4</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Links</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Link 1</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 2</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 3</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 4</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
+    </div>
+    <!-- Grid container -->
+
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:
