--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   </div>
 
   <br>
-  <div class="container card">
+  <div class="container card  bg-transparent text-white border-light ">
     <!--text boxes-->
     <div class="row card-body">
       <div class="col-md-7" style="margin-left:-15px;">
