--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
         <li class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            News
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Popular</a>
+            <a class="dropdown-item" href="#">Recent</a>
+            <a class="dropdown-item" href="#">Opinion</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Charts</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Heatmap</a>
+        </li>
+
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
